syntax = "proto3";
package brongnal;

// [DART-SIGNAL]
message RustStartup {
	optional string database_directory = 1;
	optional string username = 2;
}

// [DART-SIGNAL]
message RegisterUserRequest {
	optional string username = 1;
}

// [RUST-SIGNAL]
message RegisterUserResponse {
	optional string username = 1;
}

// [DART-SIGNAL]
message SendMessage {
	optional string sender = 1;
	optional string receiver = 2;
	optional string message = 3;
}

// [RUST-SIGNAL]
message ReceivedMessage {
	optional string message = 1;
    optional string sender = 2;
}
